--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "remix dev"
   },
   "dependencies": {
+    "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-separator": "1.0.0",
     "@remix-run/node": "^1.7.2",
     "@remix-run/react": "^1.7.2",
     "@remix-run/vercel": "^1.7.2",
+    "@stitches/react": "^1.2.8",
     "@vercel/node": "^2.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
