--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-icons": "^1.1.1",
     "@radix-ui/react-separator": "1.0.0",
     "@remix-run/node": "^1.7.2",
     "@remix-run/react": "^1.7.2",
